<resources>
    <string name="app_name">Feed and Find</string>
    <string name="content_description_dogpaw">dog paw</string>
    <string name="mapAPIKey">AIzaSyCQ7cZSLgPwcQwAQGkfe7jKnRRWVSzuVHA</string>

    <!--Toolbar-->
    <string name="title_location">Daet, Camarines Norte</string>

    <!--Dashboard-->
    <string name="user">Hi, User!</string>
    <string name="desc">Keep your cherished pets well-fed and effortlessly found.</string>


    <!--Image Desc-->
    <string name="icon_description">Icon Description</string>
    <string name="navigation_header">navigation header</string>


    <!--NavHeader-->
    <string name="username">Username</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="open">open</string>
    <string name="close">close</string>


    <!--Navigation-->
    <string name="gps">GPS</string>
    <string name="feeder">Feeder</string>
    <string name="reports">Reports</string>
    <string name="image_view_pet_pfp">PetPicture</string>
    <string name="image_view_pet_image_refresh">image refresh</string>

    <!--Sex Dropdown-->
    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>


    <!--feeder configuration-->
    <string name="select">Consumption Frequency</string>

    <!--Pet tracker display-->
    <string name="progress_text">----</string>
    <string name="dogsitting">dog sitting</string>
    <string name="high_temperature">high temperature</string>
    <string name="icon_desc">paw icon</string>

    <!-- commentary on movements -->
    <string name="steps_commentary_0">Your pet did not move today.</string>
    <string name="steps_commentary_100">Your pet is very inactive today.</string>
    <string name="steps_commentary_500">Your pet is active today!</string>
    <string name="steps_commentary_750">Almost there in achieving your pet\'s goals!</string>
    <string name="steps_commentary_1000">Your pet has achieved its goal! Congrats!</string>
    <string name="steps_commentary_more">Woah! Reaching new heights!\nI recommend feeding it more today.</string>
    <string name="steps">Steps</string>

    <string name="your_pet_is_currently">Your pet is currently…</string>
    <!--Pet movement types-->
    <string name="movement_idle">Idle</string>
    <string name="movement_walking">Walking</string>
    <string name="movement_running">Running</string>
</resources>