<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?background"
    tools:context=".Features.Finder.PetTracker_Data_Display">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?toolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/toolbar_icon"
                android:layout_width="31dp"
                android:layout_height="29dp"
                android:contentDescription="Location Icon"
                android:src="@drawable/dog_paw"
                app:tint="?text" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:text="Dog Name"
                android:layout_marginLeft="10dp"
                android:textColor="?text"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
        <ImageView
            android:id="@+id/open_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:paddingHorizontal="20dp"
            android:contentDescription="Location Icon"
            android:src="@drawable/menu"
            app:tint="?text" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/progress_layout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center">


        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circle_shape"
            android:indeterminate="false"
            android:progressDrawable="@drawable/circle_progress_bar"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/icon_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/progress_text"
            android:src="@drawable/img_paw"
            android:contentDescription="@string/icon_desc"/>

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/progress_text"
            android:textColor="?text"
            android:textSize="28sp"
            android:textStyle="bold"
            android:fontFamily="@font/cabin"/>

        <TextView
            android:id="@+id/steps_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress_text"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="Steps"
            android:textColor="?text"
            android:textSize="20sp"
            android:fontFamily="@font/cabin"/>


    </RelativeLayout>

    <TextView
        android:id="@+id/active_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:text="Your pet is active today!"
        android:textColor="#009688"
        android:textSize="18sp"
        android:fontFamily="@font/cabin"/>


    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:rowCount="1"
        android:columnCount="2"
        android:layout_marginTop="20dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/card_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="3"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:id="@+id/content_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dog_idle"
                    android:contentDescription="@string/dogsitting" />

                <LinearLayout
                    android:id="@+id/text_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cabin"
                        android:textColor="?text"
                        android:text="Your pet is currently..."/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Idle"
                        android:fontFamily="@font/cabin"
                        android:textColor="?text"
                        android:textSize="24sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="3"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:padding="8dp" >

            <LinearLayout
                android:id="@+id/content_layout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mid_temp"
                    android:contentDescription="@string/high_temperature" />

                <LinearLayout
                    android:id="@+id/text_layout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cabin"
                        android:textColor="?text"
                        android:text="Ambient Temperature"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cabin"
                        android:textColor="?text"
                        android:text="31.0 °C"
                        android:textSize="24sp"
                        android:textStyle="bold"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/dog_paw" />

</LinearLayout>